crates/service/tests/references/snapshots/features__references__mem__memory_def_int_idx.snap
---
source: crates/service/tests/references/mem.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 5
      },
      "end": {
        "line": 2,
        "character": 11
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 23
      },
      "end": {
        "line": 3,
        "character": 24
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 18
      },
      "end": {
        "line": 4,
        "character": 19
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 8
      },
      "end": {
        "line": 6,
        "character": 19
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 21
      },
      "end": {
        "line": 7,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 8,
        "character": 21
      },
      "end": {
        "line": 8,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 9,
        "character": 21
      },
      "end": {
        "line": 9,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 10,
        "character": 21
      },
      "end": {
        "line": 10,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 11,
        "character": 21
      },
      "end": {
        "line": 11,
        "character": 22
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 12,
        "character": 18
      },
      "end": {
        "line": 12,
        "character": 19
      }
    }
  }
]
