crates/service/tests/references/snapshots/features__references__mem__memory_ref_int_idx-2.snap
---
source: crates/service/tests/references/mem.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 23
      },
      "end": {
        "line": 3,
        "character": 24
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 18
      },
      "end": {
        "line": 4,
        "character": 19
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 8
      },
      "end": {
        "line": 6,
        "character": 19
      }
    }
  }
]
